--- a/Home.css
+++ b/Home.css
@@ -18,7 +18,7 @@
 .u-section-1 .u-image-1 {
   width: 492px;
   height: 492px;
-  background-image: url("images/54f172e41b6f2409cffdfbef04012fe8660afd9bce578269d7af0ca014108df7022625f53874ae641f2c63229c4a4689724e04aa3a08ff08c7c287_1280.jpg");
+  background-image: url("https://pixabay.com/get/g887f52069e54f172e41b6f2409cffdfbef04012fe8660afd9bce578269d7af0ca014108df7022625f53874ae641f2c63229c4a4689724e04aa3a08ff08c7c287_1280.jpg");
   background-position: 50% 50%;
   margin: 0 auto;
 }
