--- a/About.css
+++ b/About.css
@@ -1,68 +1,65 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 400px;
+  min-height: 19px;
 }.u-section-2 .u-sheet-1 {
-  min-height: 600px;
+  min-height: 659px;
+}
+
+.u-section-2 .u-text-1 {
+  margin: 81px auto 0;
 }
 
 .u-section-2 .u-video-1 {
-  height: 500px;
-  margin: 50px 0;
+  height: 360px;
+  width: 640px;
+  margin: 17px auto 60px;
 }
 
 .u-section-2 .embed-responsive-1 {
   position: absolute;
-  width: 178%;
-  left: -39%;
-  height: 178%;
-  top: -39%;
-}
-
-@media (max-width: 1199px) {
-  .u-section-2 .u-video-1 {
-    margin-right: initial;
-    margin-left: initial;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 504px;
-  }
-
-  .u-section-2 .u-video-1 {
-    height: 404px;
-    margin-right: initial;
-    margin-left: initial;
-  }
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
 }
 
 @media (max-width: 767px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 5px;
+    min-height: 603px;
   }
 
   .u-section-2 .u-video-1 {
-    height: 310px;
-    margin-right: initial;
-    margin-left: initial;
+    height: 304px;
+    width: 540px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 0;
+    min-height: 490px;
   }
 
   .u-section-2 .u-video-1 {
-    height: 200px;
-    margin-right: initial;
-    margin-left: initial;
+    height: 191px;
+    width: 340px;
   }
+}.u-section-3 .u-sheet-1 {
+  min-height: 600px;
+}
 
-  .u-section-2 .embed-responsive-1 {
-    width: 261%;
-    left: -81%;
-    height: 100%;
-    top: 0%;
+@media (max-width: 991px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 504px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 5px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 0;
   }
 }
