--- a/Home.css
+++ b/Home.css
@@ -12,15 +12,15 @@
 }
 
 .u-section-1 .u-container-layout-1 {
-  padding: 20px 30px;
+  padding: 20px 28px;
 }
 
 .u-section-1 .u-image-1 {
-  height: auto;
+  height: 491px;
   background-image: url("images/ProfilePic.jpg");
   background-position: 50% 50%;
-  margin-top: 109px;
-  margin-bottom: 0;
+  width: 491px;
+  margin: 8px auto 0 0;
 }
 
 .u-section-1 .u-layout-cell-2 {
@@ -52,74 +52,6 @@
 
 .u-section-1 .u-container-layout-3 {
   padding: 30px 10px 10px 30px;
-}
-
-.u-section-1 .u-group-1 {
-  width: 156px;
-  height: auto;
-  transition-duration: 0.5s;
-  min-height: 156px;
-  transform: translateX(0px) translateY(0px) scale(1) rotate(0deg);
-  margin: 0 auto 0 0;
-}
-
-.u-section-1 .u-container-layout-4 {
-  padding-top: 0;
-  padding-bottom: 0;
-}
-
-.u-section-1 .u-text-4 {
-  transition-duration: 0.5s;
-  letter-spacing: 1px;
-  font-weight: 500;
-  margin: 0 auto;
-}
-
-.u-section-1 .u-btn-1 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-1 .u-group-2 {
-  width: 156px;
-  height: auto;
-  transition-duration: 0.5s;
-  min-height: 156px;
-  transform: translateX(0px) translateY(0px) scale(1) rotate(0deg);
-  margin: -156px 206px 0 auto;
-}
-
-.u-section-1 .u-text-5 {
-  transition-duration: 0.5s;
-  letter-spacing: 1px;
-  font-weight: 500;
-  margin: 0 auto;
-}
-
-.u-section-1 .u-btn-2 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-1 .u-group-3 {
-  width: 156px;
-  height: auto;
-  transition-duration: 0.5s;
-  min-height: 156px;
-  transform: translateX(0px) translateY(0px) scale(1) rotate(0deg);
-  margin: -156px 19px 0 auto;
-}
-
-.u-section-1 .u-text-6 {
-  transition-duration: 0.5s;
-  letter-spacing: 1px;
-  font-weight: 500;
-  margin: 0 auto;
-}
-
-.u-section-1 .u-btn-3 {
-  background-image: none;
-  padding: 0;
 }
 
 @media (max-width: 1199px) {
@@ -156,19 +88,6 @@
     padding-bottom: 0;
     padding-left: 0;
   }
-
-  .u-section-1 .u-group-2 {
-    margin-right: auto;
-    margin-left: 173px;
-  }
-
-  .u-section-1 .u-text-5 {
-    margin-top: 64px;
-  }
-
-  .u-section-1 .u-group-3 {
-    margin-right: 20px;
-  }
 }
 
 @media (max-width: 991px) {
@@ -189,7 +108,7 @@
   .u-section-1 .u-image-1 {
     height: 453px;
     margin-top: 17px;
-    width: auto;
+    width: 453px;
   }
 
   .u-section-1 .u-layout-cell-2 {
@@ -197,11 +116,7 @@
   }
 
   .u-section-1 .u-layout-cell-3 {
-    min-height: 203px;
-  }
-
-  .u-section-1 .u-group-3 {
-    margin-right: 194px;
+    min-height: 288px;
   }
 }
 
@@ -220,8 +135,7 @@
   }
 
   .u-section-1 .u-image-1 {
-    margin-top: 109px;
-    width: auto;
+    margin-top: 8px;
   }
 
   .u-section-1 .u-layout-cell-2 {
@@ -233,11 +147,7 @@
   }
 
   .u-section-1 .u-layout-cell-3 {
-    min-height: 209px;
-  }
-
-  .u-section-1 .u-group-3 {
-    margin-right: 28px;
+    min-height: 216px;
   }
 }
 
@@ -252,7 +162,7 @@
 
   .u-section-1 .u-image-1 {
     height: 323px;
-    width: auto;
+    width: 323px;
   }
 
   .u-section-1 .u-text-1 {
@@ -260,161 +170,6 @@
   }
 
   .u-section-1 .u-layout-cell-3 {
-    min-height: 563px;
+    min-height: 136px;
   }
-
-  .u-section-1 .u-group-2 {
-    margin-top: 27px;
-    margin-left: 0;
-  }
-
-  .u-section-1 .u-group-3 {
-    margin-top: 17px;
-    margin-right: auto;
-    margin-left: 0;
-  }
-}
-
-.u-section-1 .u-group-1,
-.u-section-1 .u-group-1:before,
-.u-section-1 .u-group-1 > .u-container-layout:before {
-  transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, image-zoom, background-size, background-position;
-}
-
-.u-section-1 .u-group-1.u-group-1.u-group-1:hover {
-  transform: translateX(0px) translateY(-5px) scale(1) !important;
-}
-
-.u-section-1 .u-group-1.u-group-1.u-group-1.hover {
-  transform: translateX(0px) translateY(-5px) scale(1) !important;
-}
-
-.u-section-1 .u-container-layout:hover .u-group-1:before {
-  background-color: #ffffff !important;
-}
-
-.u-section-1 .u-container-layout:hover .u-group-1 {
-  transform: rotate(0deg) scale(1) translateX(0px) translateY(0px) !important;
-}
-
-.u-container-layout.hover .u-section-1 .u-group-1 {
-  transform: rotate(0deg) scale(1) translateX(0px) translateY(0px) !important;
-}
-
-.u-section-1 .u-text-4,
-.u-section-1 .u-text-4:before,
-.u-section-1 .u-text-4 > .u-container-layout:before {
-  transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, image-zoom, background-size, background-position;
-}
-
-.u-section-1 .u-text-4.u-text-4.u-text-4:hover {
-  color: #478ac9 !important;
-}
-
-.u-section-1 .u-text-4.u-text-4.u-text-4.hover {
-  color: #478ac9 !important;
-}
-
-.u-section-1 .u-container-layout:hover .u-text-4 {
-  color: #478ac9 !important;
-}
-
-.u-container-layout.hover .u-section-1 .u-text-4 {
-  color: #478ac9 !important;
-}
-
-.u-section-1 .u-group-2,
-.u-section-1 .u-group-2:before,
-.u-section-1 .u-group-2 > .u-container-layout:before {
-  transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, image-zoom, background-size, background-position;
-}
-
-.u-section-1 .u-group-2.u-group-2.u-group-2:hover {
-  transform: translateX(0px) translateY(-5px) scale(1) !important;
-}
-
-.u-section-1 .u-group-2.u-group-2.u-group-2.hover {
-  transform: translateX(0px) translateY(-5px) scale(1) !important;
-}
-
-.u-section-1 .u-container-layout:hover .u-group-2:before {
-  background-color: #ffffff !important;
-}
-
-.u-section-1 .u-container-layout:hover .u-group-2 {
-  transform: rotate(0deg) scale(1) translateX(0px) translateY(0px) !important;
-}
-
-.u-container-layout.hover .u-section-1 .u-group-2 {
-  transform: rotate(0deg) scale(1) translateX(0px) translateY(0px) !important;
-}
-
-.u-section-1 .u-text-5,
-.u-section-1 .u-text-5:before,
-.u-section-1 .u-text-5 > .u-container-layout:before {
-  transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, image-zoom, background-size, background-position;
-}
-
-.u-section-1 .u-text-5.u-text-5.u-text-5:hover {
-  color: #db545a !important;
-}
-
-.u-section-1 .u-text-5.u-text-5.u-text-5.hover {
-  color: #db545a !important;
-}
-
-.u-section-1 .u-container-layout:hover .u-text-5 {
-  color: #db545a !important;
-}
-
-.u-container-layout.hover .u-section-1 .u-text-5 {
-  color: #db545a !important;
-}
-
-.u-section-1 .u-group-3,
-.u-section-1 .u-group-3:before,
-.u-section-1 .u-group-3 > .u-container-layout:before {
-  transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, image-zoom, background-size, background-position;
-}
-
-.u-section-1 .u-group-3.u-group-3.u-group-3:hover {
-  transform: translateX(0px) translateY(-5px) scale(1) !important;
-}
-
-.u-section-1 .u-group-3.u-group-3.u-group-3.hover {
-  transform: translateX(0px) translateY(-5px) scale(1) !important;
-}
-
-.u-section-1 .u-container-layout:hover .u-group-3:before {
-  background-color: #ffffff !important;
-}
-
-.u-section-1 .u-container-layout:hover .u-group-3 {
-  transform: rotate(0deg) scale(1) translateX(0px) translateY(0px) !important;
-}
-
-.u-container-layout.hover .u-section-1 .u-group-3 {
-  transform: rotate(0deg) scale(1) translateX(0px) translateY(0px) !important;
-}
-
-.u-section-1 .u-text-6,
-.u-section-1 .u-text-6:before,
-.u-section-1 .u-text-6 > .u-container-layout:before {
-  transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, image-zoom, background-size, background-position;
-}
-
-.u-section-1 .u-text-6.u-text-6.u-text-6:hover {
-  color: #db545a !important;
-}
-
-.u-section-1 .u-text-6.u-text-6.u-text-6.hover {
-  color: #db545a !important;
-}
-
-.u-section-1 .u-container-layout:hover .u-text-6 {
-  color: #f1c50e !important;
-}
-
-.u-container-layout.hover .u-section-1 .u-text-6 {
-  color: #f1c50e !important;
 }
