--- a/Resume.css
+++ b/Resume.css
@@ -1,89 +1,118 @@
 .u-section-1 .u-sheet-1 {
+  min-height: 72px;
+}
+
+.u-section-1 .u-btn-1 {
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 0.875rem;
+  letter-spacing: 1px;
+  margin-bottom: 10px;
+  margin-top: 20px;
+}.u-section-2 .u-sheet-1 {
   min-height: 400px;
 }
 
-.u-section-1 .u-layout-wrap-1 {
+.u-section-2 .u-layout-wrap-1 {
   margin-top: 60px;
   margin-bottom: 60px;
   position: relative;
 }
 
-.u-section-1 .u-layout-cell-1 {
-  min-height: 400px;
+.u-section-2 .u-layout-cell-1 {
+  min-height: 1572px;
 }
 
-.u-section-1 .u-container-layout-1 {
+.u-section-2 .u-container-layout-1 {
   padding: 30px;
 }
 
-.u-section-1 .u-text-1 {
-  margin-bottom: 0;
-  margin-top: 0;
+.u-section-2 .u-text-1 {
+  margin: 0;
 }
 
-.u-section-1 .u-layout-cell-2 {
-  min-height: 400px;
+.u-section-2 .u-layout-cell-2 {
+  min-height: 1312px;
 }
 
-.u-section-1 .u-container-layout-2 {
+.u-section-2 .u-container-layout-2 {
   padding: 30px;
 }
 
-.u-section-1 .u-text-2 {
-  margin-bottom: 0;
-  margin-top: 0;
+.u-section-2 .u-text-2 {
+  margin: 0;
+}
+
+.u-section-2 .u-btn-1 {
+  background-image: none;
+  padding: 0;
+}
+
+.u-section-2 .u-btn-2 {
+  background-image: none;
+  padding: 0;
+}
+
+.u-section-2 .u-btn-3 {
+  background-image: none;
+  padding: 0;
+}
+
+.u-section-2 .u-btn-4 {
+  background-image: none;
+  padding: 0;
 }
 
 @media (max-width: 1199px) {
-  .u-section-1 .u-sheet-1 {
+  .u-section-2 .u-sheet-1 {
     min-height: 330px;
   }
 
-  .u-section-1 .u-layout-cell-1 {
-    min-height: 330px;
+  .u-section-2 .u-layout-cell-1 {
+    min-height: 1296px;
   }
 
-  .u-section-1 .u-layout-cell-2 {
-    min-height: 330px;
+  .u-section-2 .u-layout-cell-2 {
+    min-height: 1082px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-1 .u-sheet-1 {
+  .u-section-2 .u-sheet-1 {
     min-height: 253px;
   }
 
-  .u-section-1 .u-layout-cell-1 {
+  .u-section-2 .u-layout-cell-1 {
     min-height: 100px;
   }
 
-  .u-section-1 .u-layout-cell-2 {
+  .u-section-2 .u-layout-cell-2 {
     min-height: 100px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-1 .u-sheet-1 {
+  .u-section-2 .u-sheet-1 {
     min-height: 760px;
   }
 
-  .u-section-1 .u-container-layout-1 {
+  .u-section-2 .u-container-layout-1 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-1 .u-container-layout-2 {
+  .u-section-2 .u-container-layout-2 {
     padding-left: 10px;
     padding-right: 10px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-1 .u-sheet-1 {
+  .u-section-2 .u-sheet-1 {
     min-height: 478px;
   }
-}.u-section-2 .u-sheet-1 {
-  min-height: 784px;
 }.u-section-3 .u-sheet-1 {
+  min-height: 784px;
+}.u-section-4 .u-sheet-1 {
   min-height: 404px;
 }
